update multiple stateflows to a single stateflow in both viewmodels, update tests accordingly, fix mockito warning